# GitOS

./: .gdbinit  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  _b_m_p_file_8cpp.html  _b_m_p_file_8hpp.html  _b_m_p_file_8hpp.js  _b_m_p_file_8hpp_source.html  _bootloader_8cpp.html  _bootloader_8hpp.html  _bootloader_8hpp.js  _bootloader_8hpp_source.html  _e_l_f_file_8cpp.html  _e_l_f_file_8hpp.html  _e_l_f_file_8hpp.js  _e_l_f_file_8hpp_source.html  _git_boot_8cpp.html  _git_boot_8hpp.html  _git_boot_8hpp.js  _git_boot_8hpp_source.html  _memory_f_s_8cpp.html  _memory_f_s_8cpp.js  _memory_f_s_8hpp.html  _memory_f_s_8hpp.js  _memory_f_s_8hpp_source.html  _multiboot_8cpp.html  _multiboot_8hpp.html  _multiboot_8hpp.js  _multiboot_8hpp_source.html  _p_s2_mouse_8cpp.html  _p_s2_mouse_8cpp.js  _p_s2_mouse_8hpp.html  _p_s2_mouse_8hpp.js  _p_s2_mouse_8hpp_source.html  _path_8cpp.html  _path_8cpp.js  _path_8hpp.html  (+570 more)
.devcontainer/: devcontainer.json
.github/workflows/: doxygen-gh-pages.yml
docker/: Dockerfile  devcontainer.json
fs/: GIT.TXT  hello.txt
fs/boot/grub/: grub.cfg
fs/dir/: file.txt
scripts/: install_gitboot.sh  install_grub.sh  make_disk.sh  qemu.sh  qemu_debug.sh  read_serial.cmd  read_serial.sh  run_in_qemu.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_d.js  defines_0.js  (+102 more)
src/: boot.asm  kernel.asm  kernel_linker.ld  linker.ld  userland_linker.ld
src/boot/: CMakeLists.txt  ata.asm  boot.asm  fat16_bpb.asm  gdt.asm  kernel.asm  memmap.asm
src/kernel/: CMakeLists.txt  kernel.asm  kernel.c  kernel.cpp  kernel.h  linker.ld  pm_entry.asm
src/kernel/bootloaders/: Bootloader.cpp  Bootloader.hpp
src/kernel/bootloaders/gitboot/: GitBoot.cpp  GitBoot.hpp
src/kernel/bootloaders/multiboot2/: Multiboot.cpp  Multiboot.hpp  multiboot.h
src/kernel/common/: assert.h  io.c  io.h  status.h  string.c  string.h
src/kernel/compositor/: compositor.cpp  compositor.hpp
src/kernel/drivers/disk/: disk.c  disk.h  disk_streamer.c  disk_streamer.h
src/kernel/drivers/graphics/: graphics.cpp  graphics.hpp
src/kernel/drivers/graphics/text_mode/: text_mode.cpp  text_mode.hpp
src/kernel/drivers/graphics/vbe/: vbe_graphics.cpp  vbe_graphics.hpp
src/kernel/drivers/pic/: pic.c  pic.h
src/kernel/drivers/ps2keyboard/: ps2keyboard.c  ps2keyboard.h
src/kernel/drivers/ps2mouse/: PS2Mouse.cpp  PS2Mouse.hpp
src/kernel/drivers/serial/: serial.c  serial.h
src/kernel/drivers/text_mode/: text_mode.c  text_mode.h
src/kernel/formats/elf/: ELFFile.cpp  ELFFile.hpp
src/kernel/fs/: Path.cpp  Path.hpp  file.c  file.h  pathparser.c  pathparser.h
src/kernel/fs/fat16/: fat16.c  fat16.h
src/kernel/fs/memory/: MemoryFS.cpp  MemoryFS.hpp
src/kernel/fs/pipe/: PipeFS.cpp  PipeFS.hpp
src/kernel/gdt/: gdt.asm  gdt.c  gdt.h
src/kernel/idt/: idt.c  idt.h  idt_handler.asm
src/kernel/keyboard/: keyboard.c  keyboard.h
src/kernel/memory/: bios_memory_map.h  memory.c  memory.h
src/kernel/memory/heap/: heap.c  heap.h  hkeap.c  kheap.h
src/kernel/memory/paging/: paging.asm  paging.c  paging.h
src/kernel/syscall/: syscall.asm  syscall.c  syscall.cpp  syscall.h  syscall.hpp
src/kernel/task/: process.c  process.cpp  process.h  task.asm  task.c  task.h  tss.asm  tss.h
src/userland/: CMakeLists.txt  Makefile  linker.ld
src/userland/blank/: CMakeLists.txt  blank.asm  blank.cpp
src/userland/compositor/: CMakeLists.txt  compositor.cpp  compositor.hpp
src/userland/crasher/: CMakeLists.txt  crasher.cpp
src/userland/shell/: CMakeLists.txt  shell.cpp
src/userland/stdlib/: CMakeLists.txt  crt0.asm  crt0.c  file.asm  file.h  memory.cpp  misc.asm  misc.h  start.asm  stdio.asm  stdio.h  string.c  string.h
src/userland/stdlib/format/bmp/: BMPFile.cpp  BMPFile.hpp
src/userland/stdlib/graphics/: framebuffer.asm  framebuffer.cpp  framebuffer.hpp
src/userland/stdlib/window/: window.h
src/userland/wintest/: CMakeLists.txt  wintest.cpp
src/userland/zofia/: CMakeLists.txt  zofia.cpp
string-test/: Makefile  compile.sh  dump.sh  run.sh  string_print_test  string_print_test.asm
